crates/core/tests/integration/snapshots/test_human_ailoop__human_approval_via_ailoop_timeout_default.snap
---
source: tests/integration/test_human_ailoop.rs
expression: entry
---
approved: true
choice: ~
choices: ~
decision_id: ~
default_used: true
execution_id: "[execution_id]"
interviewer_type: ailoop
prompt: Approve release?
responder: ~
response_text: ~
task_id: approval
timeout_applied: true
timestamp: "[timestamp]"
