crates/core/tests/integration/snapshots/test_human_ailoop__human_decision_structured_via_ailoop.snap
---
source: tests/integration/test_human_ailoop.rs
expression: entry
---
approved: ~
choice: canary
choices:
  - canary
  - blue_green
  - skip
decision_id: rollout-strategy
default_used: false
execution_id: "[execution_id]"
interviewer_type: ailoop
prompt: Which rollout strategy?
responder: ~
response_text: canary
task_id: pick_strategy
timeout_applied: false
timestamp: "[timestamp]"
